implement css for the home page

--- a/home.html
+++ b/home.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="./css/home.css">
     <title>My hobbies</title>
   </head>
-  <body>
+  <body id="hobbies-page">
     <head>
       <title><h1>My hobbies</h1></title>
+      <h1>hey there, I'm Patrick</h1>
+      <h2>those are my hobbies for the month</h2>
+      <div class="paragraph">
+        <p>being a hiperfocused person make me have monthly obsessions, so none of these can be true after some weeks.</p>
+      </div>
     </head>
-    <body>
-      <h2>hey there, my name is Patrick Santos and those are my hobbies</h2>
-      <ul>
-        <li>
-          <img src="images/coding.jpg" alt="">
-          <a href="#">Programing</a>
-        </li>
-        <li><a href="#">Travelling</a></li>
-        <li><a href="#">video games</a></li>
-        <li><a href="#">cooking</a></li>
-      </ul>
-    </body>
+    <ul>
+      <li>
+        <img src="images/coding.jpg" alt="">
+        <a href="#">Programing</a>
+      </li>
+      <li>
+        <img src="images/travel.jpg" alt="">
+        <a href="#">Travelling</a>
+      </li>
+      <li>
+        <img src="images/videogames.jpg" alt="">
+        <a href="#">video games</a>
+      </li>
+      <li>
+        <img src="images/cooking.jpg" alt="">
+        <a href="#">cooking</a>
+      </li>
+    </ul>
   </body>
-  <footer>
+  <footer class="footer">
     <p>thank you for reading...</p>
+    <div class="footer-social-links">
+      <a href="https://www.linkedin.com/in/patricksanto/">Linkedin</a>
+      <a href="https://github.com/patricksanto">Github</a>
+    </div>
   </footer>
 </html>
