fix the css for home page

--- a/home.html
+++ b/home.html
@@ -16,27 +16,27 @@
     <ul>
       <li>
         <img src="images/coding.jpg" alt="">
-        <a href="#">Programing</a>
+        <h5 href="#">Programing</h5>
       </li>
       <li>
-        <img src="images/travel.jpg" alt="">
-        <a href="#">Travelling</a>
+        <img src="images/coffee.jpg" alt="">
+        <h5 href="#">coffee</h5>
       </li>
       <li>
-        <img src="images/videogames.jpg" alt="">
-        <a href="#">video games</a>
+        <img src="images/ice_skating_2.jpg" alt="">
+        <h5 href="#">ice skating</h5>
       </li>
       <li>
         <img src="images/cooking.jpg" alt="">
-        <a href="#">cooking</a>
+        <h5 href="#">cooking</h5>
       </li>
     </ul>
   </body>
   <footer class="footer">
     <p>thank you for reading...</p>
     <div class="footer-social-links">
-      <a href="https://www.linkedin.com/in/patricksanto/">Linkedin</a>
-      <a href="https://github.com/patricksanto">Github</a>
+      <a href="https://www.linkedin.com/in/patricksanto/" target="_blank">Linkedin</a>
+      <a href="https://github.com/patricksanto" target="_blank">Github</a>
     </div>
   </footer>
 </html>
